# Spravki-Backend

./: .env  .env.example  .gitignore  Dockerfile  Dockerfile.worker  const.json  data.json  dev-docker-compose.yaml  docker-compose.yaml  entrypoint.sh  pyproject.toml  requirements.txt  test.py
alembic/: env.py
alembic/versions/: 437bc321a964_add_department_column.py  6a4177c6cd70_initial.py  7ef2c7204b66_comment.py  b57b383b8bea_sth.py  c63f51925372_something.py
src/: Certificate.py  SocialFoundationCertificate.py  config.py  main.py
src/db/: database.py
src/models/: order_model.py
src/rabbitmq/: consumer.py  publisher.py
src/rabbitmq/tasks/: AbstractCertificate.py  CertificateSchema.py  HeadersSchema.py
src/rabbitmq/tasks/impl/: SocialFoundationCertificate.py  SocialFoundationCertificateSchema.py
src/rabbitmq/tasks/impl/templates/: SocialFoundationCertificate.html
src/repository/: database_repository.py  user_repository.py
src/routers/: user_routers.py  user_routes.py
src/schemas/: DownloadSchema.py  HeadersSchema.py  certificate_shema.py  department_shema.py  filter_shema.py  order_shema.py  user_schema.py
src/services/: auth_service.py  data_service.py  order_service.py  user_service.py  user_services.py
src/templates/Army/: .html
src/templates/GivingDocuments/: .html  .json
src/templates/GivingMarkTable/: .html  .json
src/templates/LeavingSESC/: .html  .json
src/templates/SocialFoundaton/: .html  .json
src/templates/Std/: .html  .json
src/templates/TaxFoundation/: .html  .json
templates/: SocialFoundationCertificate.html
