[project]
name = "references"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.129.0",
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
    "python-jose>=3.5.0",
    "uvicorn>=0.40.0",
    "weasyprint>=68.1",
    "aio_pika",
    "pydantic-settings",
]
